--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
+    "i18next": "^25.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.8.2",
