--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+    "engines": {
+    "node": "18.x",
+    "npm": "10.x"
   }
+
 }
